--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.4.0",
     "@runno/runtime": "^0.5.1",
     "@runno/wasi": "^0.5.1",
     "@types/node": "20.4.8",
@@ -17,6 +18,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "negotiator": "^0.6.3",
     "next": "13.4.12",
     "next-themes": "^0.2.1",
     "postcss": "8.4.27",
@@ -30,6 +32,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
+    "@types/negotiator": "^0.6.1",
     "daisyui": "^3.5.1",
     "eslint-plugin-react-hooks": "^5.0.0-canary-7118f5dd7-20230705"
   }
